# nix-public

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .treefmt.toml  flake.nix  pyproject.toml
.zed/: settings.json
configurations/desktop/: default.nix
configurations/server/: default.nix
default/: default.nix
default/hosts/: default.nix
default/hosts/default/: default.nix
default/hosts/default/systems/: default.nix
default/programs/: default.nix
default/programs/dev/: default.nix
default/programs/dev/git/: default.nix  git.gitignore
default/programs/editors/: default.nix
default/programs/shells/: default.nix
default/scripts/: default.nix  fallback.nix
default/scripts/nix/: default.nix  fallback.nix
default/systems/: default.nix  nix.nix
default/systems/darwin/: nix.nix
default/users/: default.nix  home.nix
default/users/default/: default.nix
desktop/: darwin.nix  default.nix  desktop.nix  system.nix
desktop/hosts/: default.nix
desktop/hosts/default/: default.nix
desktop/programs/: default.nix
desktop/programs/dev/: default.nix  rage.nix
desktop/programs/editors/: default.nix
desktop/programs/karabiner/: default.nix  karabiner.yaml  sync_karabiner.py
desktop/programs/kitty/: default.nix  kitty.conf  launch-actions.conf
desktop/programs/nano/: default.nix
desktop/programs/nix/: default.nix
desktop/programs/raycast/: .gitignore
desktop/programs/shells/: default.nix  fish.nix  shell-plugins.nix  shells.nix  starship.nix
desktop/programs/terminals/: default.nix
desktop/programs/windows/: default.nix
desktop/programs/yabai/: .yabairc  default.nix
desktop/programs/zed/: default.nix  keymap.json  settings.json  settings.json5  tasks.json  tasks.json5
desktop/scripts/: default.nix  fallback.nix
desktop/scripts/nix/: default.nix  pyproject.toml
desktop/scripts/nix/syncers/: config.py  sync.py
desktop/scripts/nix/syncers/keyboard/: keymap.py  mapper.py  parser.py  utils.py
desktop/scripts/nix/syncers/programs/aerospace/: sync.py
desktop/scripts/nix/syncers/programs/karabiner/: __init__.py  consts.py  sync.py
desktop/scripts/nix/syncers/programs/launchpad/: db.py  types.py
desktop/syncers/: __main__.py  config.py  sync.py  types.py
desktop/syncers/keyboard/: parser.py  types.py
desktop/systems/: default.nix
desktop/systems/darwin/: macOS.nix  platform.nix  ramfs.nix
desktop/users/: default.nix  fallback.nix  home-manager.nix  keyboard.yaml  programs.yaml  secrets.nix  system.nix
desktop/users/default/: default.nix
desktop/users/default/scripts/nix/: default.nix  pyproject.toml
desktop/users/default/scripts/nix/syncers/: __main__.py  config.py  sync.py  types.py  utils.py
desktop/users/default/scripts/nix/syncers/keyboard/: parser.py  types.py  utils.py
desktop/users/default/scripts/nix/syncers/programs/karabiner/: consts.py  keymap.py  sync.py
desktop/users/default/scripts/nix/syncers/programs/launchpad/: sync.py  types.py
desktop/users/user/: .gitignore  system.nix  user.nix
modules/profiles/default/: default.nix
modules/profiles/desktop/: default.nix
modules/profiles/server/: user.nix
modules/programs/default/: default.nix
modules/scripts/default/: default.nix  fallback.nix
modules/scripts/desktop/: default.nix  fallback.nix
modules/users/: default.nix  fallback.nix  keyboard.yaml  programs.yaml
modules/users/user/: user.nix
server/: default.nix
server/hosts/server/: configuration.nix  hardware-configuration.nix
server/users/: default.nix
(+150 files in other folders)
