[project]
name = "nix"
version = "1"
description = "EcmaXp's nix"
authors = [{ name = "EcmaXp" }]
requires-python = "~= 3.13.4"
classifiers = ["Private :: Do not Upload"]

[project.urls]
Repository = "https://github.com/EcmaXp/nix-public"

[tool.uv.workspace]
members = ["desktop/users/default/scripts/nix"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = [
    "B020", # loop-variable-overrides-iterator
    "E501", # line-too-long
]
